--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,4 +9,4 @@ BBFILE_PATTERN_meta-mender-tegra-layer = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-mender-tegra-layer = "10"
 LAYERVERSION_meta-mender-tegra-layer = "1"
 LAYERSERIES_COMPAT_meta-mender-tegra-layer = "sumo"
-#LAYERDEPENDS_meta-mender-tegra-layer = ""
+LAYERDEPENDS_meta-mender-tegra-layer = "tegra"
